KVH/mykvh/Email-to-anything/objects/Recent_Item_Regex_Group__c.object
<CustomObject>
    <fields>
        <fullName>Apply_quantifier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply quantifier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capture_group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Capture group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Followed_by__c</fullName>
        <label>Followed by</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>followed by</fullName>
                </value>
                <value>
                    <fullName>or</fullName>
                </value>
                <value>
                    <fullName>only if followed by</fullName>
                </value>
                <value>
                    <fullName>only if not followed by</fullName>
                </value>
                <value>
                    <fullName>ending in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Free_text__c</fullName>
        <label>Free text</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Free text</fullName>
                </value>
                <value>
                    <fullName>any character</fullName>
                </value>
                <value>
                    <fullName>any letter a-z</fullName>
                </value>
                <value>
                    <fullName>any lowercase letter a-z</fullName>
                </value>
                <value>
                    <fullName>any uppercase letter A-Z</fullName>
                </value>
                <value>
                    <fullName>any digit 0-9</fullName>
                </value>
                <value>
                    <fullName>any ASCII word character</fullName>
                </value>
                <value>
                    <fullName>any whitespace</fullName>
                </value>
                <value>
                    <fullName>any word boundary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <label>Group Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_fields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match_string__c</fullName>
        <label>Match string</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Match a string which contains</fullName>
                </value>
                <value>
                    <fullName>Match a string which starts with</fullName>
                </value>
                <value>
                    <fullName>Match a string which ends in</fullName>
                </value>
                <value>
                    <fullName>Match a string which starts and ends in</fullName>
                </value>
                <value>
                    <fullName>Match a string that comes after</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantifier_Val_1__c</fullName>
        <label>Quantifier Val 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantifier_Val_2__c</fullName>
        <label>Quantifier Val 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantifier__c</fullName>
        <label>Quantifier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recent_Item_Regex__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recent Item Regex</label>
        <referenceTo>Recent_Item_Regex__c</referenceTo>
        <relationshipName>RecentItemRegexGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Recent Item Regex Group</label>
    <nameField>
        <label>Field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recent Item Regex Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>